--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/css/style.css
@@ -6,6 +6,11 @@ body {
     padding: 0px 10px 0px 10px;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
 .biggerProjects img {
     width: 40%;
     height: auto;
@@ -82,4 +87,8 @@ i, img{
 
 span {
     font-weight: bold;
+}
+
+img {
+    filter: grayscale(100%);
 }
