--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
@@ -14,9 +14,6 @@ header {
     color: black;
 }
 
-header p{
-    color: black;
-}
 
 .projectsHeader {
     border-bottom: 2px solid black;
@@ -50,7 +47,7 @@ div {
     transition: box-shadow 0.5s;
 }
 
-.button {
+.button, .whiteButton {
     background-color: black;
     border: solid rgb(104, 104, 104);
     border-width: 0.2rem;
@@ -58,10 +55,16 @@ div {
     border-radius: 0.5rem;
     margin-bottom: 1rem;
     display: inline-block;
+    color: white;
+}
+
+.whiteButton {
+    color: black;
+    background-color: white;
 }
 
 a {
-    color: white;
+    color: black;
     font-size: 1rem;
     text-decoration: none;   
 }
@@ -70,6 +73,92 @@ a {
     background-color: white;
     color: black
 }
+
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+.dark-mode-header {
+    background-color: black;
+    color: white;
+    border-bottom: none;
+    border-bottom: 2px solid white;
+}
+
+.dark-mode-button {
+    background-color: white;
+    color: black;
+}
+
+
+/*
+taken fornm w3 schools.
+*/
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  /*
+      w3 schools end
+  */
+
+  .DMDiv {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 
 @media only screen and (min-width: 600px) {
     .projectsList div {
@@ -82,7 +171,9 @@ a {
     button {
         width: 80%;
     }
+    /*
     div {
         margin: 20% 2% 20% 2%;
     }
+    */
 }
