--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
@@ -12,11 +12,20 @@ header {
     display: flex;
     justify-content: space-evenly;
     color: black;
+    flex-wrap: wrap;
 }
 
 
 .projectsHeader {
     border-bottom: 2px solid black;
+}
+
+header a {
+    padding: 0px 20px 0px 20px;
+}
+
+.DMDiv p, .DMDiv label {
+    margin: 0px 30px 0px 30px;
 }
 
 body {
@@ -27,7 +36,6 @@ body {
 }
 
 div {
-    margin: 2% 2% 2% 2%;
     word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
@@ -165,15 +173,63 @@ taken fornm w3 schools.
         width: 40%;
         height: auto;
     }
+    body {
+        margin: 0px 250px 0px 250px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
     button {
         width: 80%;
     }
+    div {
+        margin: 2% 2% 2% 2%;
+    }
     /*
     div {
         margin: 20% 2% 20% 2%;
     }
     */
+}
+
+  /* media queries for desktop */
+  @media only screen and (min-width: 600px) {
+    body {
+        margin: 0px 20% 0px 20%;
+    }
+    /* bigger projects section */
+    .biggerProjects li {
+        font-size: 1.5rem;
+        margin: 30px 0px 30px 50px;
+    }
+    .portrait {
+        padding: 0px;
+    }
+    .biggerProjects {
+        justify-content: space-between;
+    }
+    .biggerProjects img {
+        width: 30%;
+    }
+    /* general css declarations */
+    h1 {
+        font-size: 2.5rem;
+    }
+    h2 {
+        font-size: 2rem;
+        margin-bottom: 0px;
+    }
+    h3 {
+        font-size: 1.8rem;
+    }
+    h4 {
+        font-size: 1.6rem;
+    }
+    p {
+        font-size: 1.3rem;
+    }
+    /* programming logos at end of page*/
+    .programmingLogos {
+        justify-content: center;
+    }
 }
