--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/resources/css/style.css
@@ -50,6 +50,13 @@ a {
     border-bottom: 2px solid white;
 }
 
+.dark-mode-link {
+  color: lightblue;
+}
+
+.dark-mode-a {
+  color: white;
+}
 
 /*
 taken fornm w3 schools.
