correct : in header and add DMB switch

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
@@ -94,6 +94,11 @@ a {
     color: black;
 }
 
+.dark-mode-button:hover {
+    background-color: black;
+    color: white;
+}
+
 
 /*
 taken fornm w3 schools.
