add comments to all css and javascript files

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
+/* general css section */
 body {
     font-family: 'Rubik', sans-serif;
     margin: 0px 0px 0px 0px;
@@ -11,6 +12,7 @@ a {
     text-decoration: none;
 }
 
+/* image css section */
 .biggerProjects img {
     width: 40%;
     height: auto;
@@ -36,6 +38,7 @@ a {
     height: auto;
 }
 
+/* header section */
 header {
     display: flex;
     justify-content: space-evenly;
@@ -47,10 +50,19 @@ header a {
     padding: 0px 20px 0px 20px;
 }
 
+/* dark mode div containing button and dark mode paragraph*/
+.DMDiv {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+/* dark mode div and button declarations */
 .DMDiv p, .DMDiv label {
     margin: 0px 30px 0px 30px;
 }
 
+/* bigger projects section */
 .biggerProjects {
     display: flex;
     align-items: center;
@@ -69,22 +81,7 @@ header a {
     border-bottom: 2px solid black;
 }
 
-.programmingLogos {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.programmingLogos div {
-    display: flex;
-    align-items: center;
-}
-
-i, img{
-    padding: 0px 10px 10px 10px;
-}
-
+/* big projects description div section */
 .bigProjectDiv img {
     width: 100%;
     height: auto;
@@ -99,11 +96,29 @@ span {
     font-weight: bold;
 }
 
+/* programming logos section */
+.programmingLogos {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.programmingLogos div {
+    display: flex;
+    align-items: center;
+}
+
+/* programming logo padding section */
+i, img{
+    padding: 0px 10px 10px 10px;
+}
+
 img {
     filter: grayscale(100%);
 }
 
-/* dark mode code to apply in css. */
+/* dark mode code to apply with javascript from this css. */
 .dark-mode {
     background-color: black;
     color: white;
@@ -116,6 +131,7 @@ img {
     border-bottom: 2px solid white;
 }
 
+/* dark mode declarations for logos that dont change automatically */
 .dark-mode-cSharpLogo {
     content: url("../images/cSharpWhiteImg.png");
 }
@@ -136,75 +152,65 @@ img {
     content: url("../images/vsCodeWhite.png");
 }
 
-/*
-taken fornm w3 schools.
-*/
+/* below taken from w3 schools */
 
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
+    /* The switch - the box around the slider */
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
 
-  /*
-      w3 schools end
-  */
+    /* Hide default HTML checkbox */
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
 
-  .DMDiv {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
+    /* The slider */
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
 
-  /* media queries for desktop */
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    input:checked + .slider {
+        background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+/* w3 schools end */
+
+/* media queries for desktop */
   @media only screen and (min-width: 600px) {
     body {
         margin: 0px 20% 0px 20%;
