--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/resources/css/style.css
@@ -1,11 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
+/* general css declarations */
 body {
     font-family: 'Rubik', sans-serif;
     margin: 0px 0px 0px 0px;
     padding: 0px 10px 0px 10px;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
+.link {
+    text-decoration: underline;
+    color: darkblue
+}
+
+/* images on contact page declaration. */
+.imgLinkC {
+    padding-right: 10px;
+}
+
+/* header section */
 header {
     display: flex;
     justify-content: space-evenly;
@@ -20,24 +37,19 @@ header a {
     padding: 0px 20px 0px 20px;
 }
 
+/* dark mode div and button declarations */
 .DMDiv p, .DMDiv label {
     margin: 0px 30px 0px 30px;
 }
 
-a {
-    color: black;
-    text-decoration: none;
-}
+/* dark mode div containing paragraph and button */
+.DMDiv {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 
-.link {
-    text-decoration: underline;
-    color: darkblue
-}
-
-.imgLinkC {
-    padding-right: 10px;
-}
-
+/* dark mode declarations */
 .dark-mode {
     background-color: black;
     color: white;
@@ -58,75 +70,67 @@ a {
   color: white;
 }
 
-/*
-taken fornm w3 schools.
-*/
+/* below taken from w3 schools */
 
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
+    /* The switch - the box around the slider */
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
 
-  /*
-      w3 schools end
-  */
+    /* Hide default HTML checkbox */
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
 
-  .DMDiv {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
+    /* The slider */
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
 
-    /* media queries for desktop */
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    input:checked + .slider {
+        background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+/* w3 schools end */
+
+
+
+/* media queries for desktop */
     @media only screen and (min-width: 600px) {
       body {
           margin: 0px 20% 0px 20%;
