--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
@@ -1,20 +1,29 @@
+/* fonts import section */
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Gabarito&family=Lato&family=Rubik&display=swap');
 
+/* general css section */
 body {
     font-family: 'Rubik', sans-serif;
     margin: 0px 0px 0px 0px;
     padding: 0px 10px 0px 10px;
+    text-align: center;
+    background-color: white;
+    color: black;
 }
 
+div {
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
+/* header section */
 header {
     display: flex;
     justify-content: space-evenly;
     color: black;
     flex-wrap: wrap;
 }
-
 
 .projectsHeader {
     border-bottom: 2px solid black;
@@ -24,59 +33,14 @@ header a {
     padding: 0px 20px 0px 20px;
 }
 
-.DMDiv p, .DMDiv label {
-    margin: 0px 30px 0px 30px;
-}
+/* dark mode div section */
+.DMDiv {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
 
-body {
-    text-align: center;
-    font-family: 'Rubik', sans-serif;
-    background-color: white;
-    color: black;
-}
-
-div {
-    word-wrap: break-word; /* Internet Explorer 5.5+ */
-}
-
-.projectsList div {
-    background-color: gainsboro;
-    padding: 0.25rem;
-    margin: auto;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    border: none;
-    color: black;
-    border-radius: 2rem;
-}
-
-.button, .whiteButton {
-    background-color: black;
-    border: solid rgb(104, 104, 104);
-    border-width: 0.2rem;
-    padding: 1rem 1rem 1rem 1rem;
-    border-radius: 0.5rem;
-    margin-bottom: 1rem;
-    display: inline-block;
-    color: white;
-}
-
-.whiteButton {
-    color: black;
-    background-color: white;
-}
-
-a {
-    color: black;
-    font-size: 1rem;
-    text-decoration: none;   
-}
-
-.button:hover {
-    background-color: white;
-    color: black
-}
-
+/* dark mode section */
 .dark-mode {
     background-color: black;
     color: white;
@@ -99,75 +63,116 @@ a {
     color: white;
 }
 
+/* dark mode div elements section */
+.DMDiv p, .DMDiv label {
+    margin: 0px 30px 0px 30px;
+}
 
-/*
-taken fornm w3 schools.
-*/
+/* projects list section */
+.projectsList div {
+    background-color: gainsboro;
+    padding: 0.25rem;
+    margin: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border: none;
+    color: black;
+    border-radius: 2rem;
+}
 
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
+/* button section */
+.button, .whiteButton {
+    background-color: black;
+    border: solid rgb(104, 104, 104);
+    border-width: 0.2rem;
+    padding: 1rem 1rem 1rem 1rem;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
     display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
+    color: white;
+}
+
+/* white button */
+.whiteButton {
+    color: black;
     background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
+}
 
-  /*
-      w3 schools end
-  */
+/* links in buttons section */
+a {
+    color: black;
+    font-size: 1rem;
+    text-decoration: none;   
+}
 
-  .DMDiv {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
+.button:hover {
+    background-color: white;
+    color: black
+}
 
+
+
+/* below taken from w3 schools */
+
+    /* The switch - the box around the slider */
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
+
+    /* Hide default HTML checkbox */
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+
+    /* The slider */
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    input:checked + .slider {
+        background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+/* w3 schools end */
+
+
+/* media queries */
+/* media queries for phones */
 @media only screen and (min-width: 600px) {
     .projectsList div {
         width: 40%;
@@ -192,7 +197,7 @@ taken fornm w3 schools.
     */
 }
 
-  /* media queries for desktop */
+/* media queries for desktop */
   @media only screen and (min-width: 600px) {
     body {
         margin: 0px 20% 0px 20%;
