make dark mode buttons same height for each page

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
@@ -38,6 +38,7 @@ header a {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin: 0px;
   }
 
 /* dark mode section */
