--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/css/style.css
@@ -12,6 +12,11 @@ a {
     text-decoration: none;
 }
 
+.biggerProjectsUnderText {
+    color: rgb(47, 47, 47);
+    margin-top: 0px;
+}
+
 /* image css section */
 .biggerProjects img {
     width: 40%;
@@ -152,6 +157,10 @@ img {
     content: url("../images/vsCodeWhite.png");
 }
 
+.dark-mode-bTUT {
+    color: rgb(167, 167, 167);
+}
+
 /* below taken from w3 schools */
 
     /* The switch - the box around the slider */
@@ -207,6 +216,8 @@ img {
         -ms-transform: translateX(26px);
         transform: translateX(26px);
     }
+
+    
 
 /* w3 schools end */
 
