--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
@@ -73,8 +73,16 @@ header a {
 }
 
 .projectsList p {
-
+    margin: 0px;
+    padding-bottom: 1.3rem;
 }
+
+.projectsList h3 {
+    margin: 0px;
+    padding-top: 1.8rem;
+    padding-bottom: 1.8rem;
+}
+
 
 /* button section */
 .button, .whiteButton {
