--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/resources/css/style.css
@@ -72,6 +72,7 @@ header a {
     border-radius: 2rem;
 }
 
+/* spacing on projectsList text */
 .projectsList p {
     margin: 0px;
     padding-bottom: 1.3rem;
