--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/resources/css/style.css
@@ -171,3 +171,10 @@ header a {
           justify-content: center;
       }
   }
+
+  /* media query for header */
+  @media only screen and (max-width: 374px) {
+    header a {
+        font-size: 14px;
+    }
+}
