remove last issue with css file

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/css/style.css
@@ -135,9 +135,12 @@ span {
      
 }
 
+/*
 img {
-    /* filter: grayscale(100%); */
+    filter: grayscale(100%); 
 }
+*/
+
 
 /* dark mode code to apply with javascript from this css. */
 .dark-mode {
