--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/resources/css/style.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
+/* Define the light theme (default) */
+:root {
+    --bg-color: white; /* Background color */
+    --text-color: black; /* Text color */
+  }
+  
+  /* Define the dark theme */
+  .dark-theme {
+    --bg-color: black; /* Background color */
+    --text-color: white; /* Text color */
+  }
+  /* Apply the theme colors to the body element */
+  body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+  }
+  
 /* general css declarations */
 body {
     font-family: 'Rubik', sans-serif;
