--- a/test3  dark mode without button working/new-main-site-17-11-23/resources/css/style.css
+++ b/test3  dark mode without button working/new-main-site-17-11-23/resources/css/style.css
@@ -24,6 +24,10 @@ body {
     padding: 0px 10px 0px 10px;
 }
 
+.biggerProjects img, .bigProjectDiv img {
+    padding: 0px;
+}
+
 a {
     color: black;
     text-decoration: none;
@@ -147,7 +151,7 @@ span {
 }
 
 /* programming logo padding section */
-.programmingLogos i, .programmingLogos img {
+i, img {
      padding: 0px 10px 10px 10px;
      
 }
