--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
+/* test5 */
 /* general css section */
 body {
     font-family: 'Rubik', sans-serif;
