--- a/CodeCademy/old-main-sites/new-main-site-17-11-23 15.39.33/resources/nestedPages/contactPage/resources/css/style.css
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23 15.39.33/resources/nestedPages/contactPage/resources/css/style.css
@@ -1,22 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
-/* Define the light theme (default) */
-:root {
-    --bg-color: white; /* Background color */
-    --text-color: black; /* Text color */
-  }
-  
-  /* Define the dark theme */
-  .dark-theme {
-    --bg-color: black; /* Background color */
-    --text-color: white; /* Text color */
-  }
-  /* Apply the theme colors to the body element */
-  body {
-    background-color: var(--bg-color);
-    color: var(--text-color);
-  }
-  
 /* general css declarations */
 body {
     font-family: 'Rubik', sans-serif;
@@ -89,35 +72,61 @@ header a {
 
 /* below taken from w3 schools */
 
-.button {
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    border-radius: 15px;
-    -webkit-tap-highlight-color: transparent;
-    font-family: 'Rubik', sans-serif;
-    margin: 4px 30px;
-}
+    /* The switch - the box around the slider */
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
 
-.button1 {
-    background-color: white;
-    color: black;
-    border: 2px solid #555555;
-  }
-  
-  .button1:hover {
-    background-color: #555555;
-    color: white;
-  }
+    /* Hide default HTML checkbox */
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
 
-  /* w3 schools end*/
+    /* The slider */
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    input:checked + .slider {
+        background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+/* w3 schools end */
 
 
 
