skift rundt på gamle f1c1 og per rettelse og lig per rettelse på egen hoved side

--- a/OwnProjectsAndTests/F1C1_start-gamle-inden-per-feedback/resources/css/style.css
+++ b/OwnProjectsAndTests/F1C1_start-gamle-inden-per-feedback/resources/css/style.css
@@ -48,14 +48,8 @@ header {
 header .content {
   display: flex;
   align-items: center;
-  /* bootstrap needed this to change to work.*/
-  /*padding: 1.875rem;*/
-  padding: 24.5px;
+  padding: 1.875rem;
   width: auto;
-}
-
-.content a {
-  text-decoration: none;
 }
 
 header .logo {
@@ -68,7 +62,6 @@ header .logo {
 
 header nav ul {
   display: flex;
-  margin-bottom: 0px;
 }
 
 nav li {
@@ -81,13 +74,11 @@ nav a {
   font-size: 1rem;
   color: #4a4a4a;
   font-family: "Roboto-Regular";
-  text-decoration: none;
 }
 
 header .icon {
   width: 1rem;
-  vertical-align: baseline;
-  margin-left: 10px;
+  padding-left: .75rem;
 }
 
 header .mobile {
@@ -113,8 +104,6 @@ header .mobile {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    margin: 8px 0px 8px 0px;
-    padding-left: 0px;
   }
 
   header .mobile li {
@@ -201,7 +190,6 @@ header .mobile {
     height: auto;
     background-color: transparent;
     border: none;
-    padding: 0px;
   }
 
   #sign-up-cta .content {
@@ -224,7 +212,6 @@ header .mobile {
 @media only screen and (max-width: 450px) {
   #sign-up-section {
     height: 20rem;
-    overflow: hidden;
   }
 
   #sign-up-cta h1 {
@@ -421,17 +408,12 @@ header .mobile {
   #quotes-section .quote {
     font-size: 1.5rem;
     line-height: 1.4;
-    padding: 0px;
   }
 
   #quotes-section quote-citation {
     display: block;
     padding-top: 1rem;
     margin: auto;
-  }
-
-  #quotes-section {
-    padding-right: 0px;
   }
 }
 
@@ -441,7 +423,6 @@ footer {
   background-color: #9b9b9b;
   padding: 1.5rem 2rem;
   height: 0.875rem;
-  height: auto;
 }
 
 footer .content {
@@ -463,11 +444,5 @@ footer .location {
 @media only screen and (min-width: 760px) {
   footer .content {
     font-size: .625rem;
-  }
-}
-
-@media only screen and (max-width: 760px) {
-  footer {
-    height: auto;
   }
 }
