--- a/resources/nestedPages/projectsPage/resources/css/style.css
+++ b/resources/nestedPages/projectsPage/resources/css/style.css
@@ -379,7 +379,7 @@ a {
 
     /* media query for tablet. */
     @media only screen and (min-width: 600px) and (max-width: 780px) {
-        body {
+        .miniBody {
             margin-left: 0px;
             margin-right: 0px;
         }
@@ -394,7 +394,7 @@ a {
 
   /* media query for header */
   @media only screen and (max-width: 374px) {
-    header a {
+    .header a {
         font-size: 14px;
     }
 }
