change highlighted 1. project on main page and remove 1 language

--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -33,6 +33,11 @@ a {
     text-decoration: none;
 }
 
+/* image borders */
+.bigProjectDiv img, .portrait {
+    border: 1px solid lightgray;
+}
+
 .biggerProjectsUnderText {
     color: rgb(47, 47, 47);
     margin-top: 0px;
