try to make changes to header

--- a/ES2011/sideTilJørgen/nuværendeEgenSidePåES2011App/resources/CSS/style.css
+++ b/ES2011/sideTilJørgen/nuværendeEgenSidePåES2011App/resources/CSS/style.css
@@ -278,7 +278,7 @@ img {
         flex-wrap: wrap;
         justify-content: center;
     }
-    .header a {
+    .topDivH a {
         font-size: 14px;
     }
     .biggerProjects {
