try to correct event centrum purple background colour

--- a/ES2011/Webintegrator-grundforløbsprøve/resources/CSS/style.css
+++ b/ES2011/Webintegrator-grundforløbsprøve/resources/CSS/style.css
@@ -107,7 +107,7 @@ a {
     height: 100%;
     box-sizing: border-box;
     background: url(../images/galleri.png);
-    background-color: blueviolet;
+    background-color: gray;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
