--- a/OwnProjectsAndTests/hjemmesideTilAgnes/resources/CSS/style.css
+++ b/OwnProjectsAndTests/hjemmesideTilAgnes/resources/CSS/style.css
@@ -92,6 +92,13 @@ h2 {
     display: none;
 }
 
+/* remove 3 lines below after testing */
+/*
+#fotosBoksIndhold {
+    display: flex;
+}
+    */
+
 #kontaktSpanBox, #portfolieBoksIndhold {
     flex-direction: column;
     align-items: flex-start;
@@ -136,6 +143,181 @@ iframe {
     padding: 1rem 0rem 1rem 0rem;
 }
 
+
+
+
+
+
+/* slideshow start */
+body {
+    margin: 0;
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .column {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .column img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+
+.row > .column {
+    padding: 8px;
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Create four equal columns that floats next to eachother */
+  .column {
+    float: left;
+  }
+  
+  /* The Modal (background) */
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    width: 90%;
+    max-width: 1200px;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  /* Hide the slides by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* Caption text */
+  .caption-container {
+    text-align: center;
+    background-color: black;
+    padding: 2px 16px;
+    color: white;
+  }
+  
+  img.demo {
+    opacity: 0.6;
+  }
+  
+  .active,
+  .demo:hover {
+    opacity: 1;
+  }
+  
+  img.hover-shadow {
+    transition: 0.3s;
+  }
+  
+  .hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
+
+
+
+  /* extra stuff that makes the images in slideshow mode be alligned in center and have a little more darkness 
+  before hover */
+  .thumbnailImageDiv {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+  }
+/* slideshow stop */
+
+
+
+
+
+
+
+
 /*media queries for phone*/
 @media only screen and (max-width: 430px) {
     .divMedTekstBokse div {
@@ -159,5 +341,10 @@ iframe {
 
     #kontaktSpanBox span p {
         font-size: 1.1rem;
+    }
+
+    #fotosBoksIndhold span a img {
+        width: 90px;
+        height: 90px;
     }
 }
